syntax = "proto3";
package dream11.oam.provideraccount.v1;

import "dream11/oam/dto/v1/provider_account.proto";
import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "com.dream11.odin.grpc.provideraccount.v1";

service ProviderAccountService {
  rpc GetProviderAccount(GetProviderAccountRequest) returns (GetProviderAccountResponse) {}
  rpc GetProviderAccounts(GetProviderAccountsRequest) returns (GetProviderAccountsResponse) {}
  rpc GetAllProviderAccounts(GetAllProviderAccountsRequest) returns (GetAllProviderAccountsResponse) {}
  rpc CreateProviderCategory(CreateProviderCategoryRequest) returns (CreateProviderCategoryResponse) {}
  rpc CreateProvider(CreateProviderRequest) returns (CreateProviderResponse) {}
  rpc CreateProviderAccount(CreateProviderAccountRequest) returns (CreateProviderAccountResponse) {}
}

message GetProviderAccountRequest {
  string name = 1;
  bool fetch_linked_account_details = 2;
}

message GetProviderAccountResponse {
  dream11.oam.dto.v1.ProviderAccount account = 1;
  repeated dream11.oam.dto.v1.ProviderAccount linked_accounts = 2;
}

message GetAllProviderAccountsRequest {
  bool fetch_linked_account_details = 1;
}

message GetAllProviderAccountsResponse {
  repeated GetProviderAccountResponse accounts = 1;
}

message GetProviderAccountsRequest {
  repeated string name = 1;
  bool fetch_linked_account_details = 2;
}

message GetProviderAccountsResponse {
  repeated GetProviderAccountResponse accounts = 1;
}

message CreateProviderCategoryRequest {
  string name = 1;
}

message CreateProviderCategoryResponse {
  bool success = 1;
}

message CreateProviderRequest {
  string name = 1;
  string provider_category_name = 2;
  google.protobuf.Struct data_schema = 3;
}

message CreateProviderResponse {
  bool success = 1;
}

message CreateProviderAccountRequest {
  string name = 1;
  string provider_name = 2;
  google.protobuf.Struct provider_data = 3;
  bool is_default = 4;
  repeated string linked_accounts = 5;
}

message CreateProviderAccountResponse {
  bool success = 1;
}
