syntax = "proto3";
package dream11.oam.psa.v1;

import "dream11/oam/dto/v1/provider_account.proto";
import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "com.dream11.odin.grpc.psa.v1";

service ProviderServiceAccountService {
  rpc GetProviderServiceAccount(GetProviderServiceAccountRequest) returns (GetProviderServiceAccountResponse) {}
  rpc CreateProviderServiceCategory(CreateProviderServiceCategoryRequest) returns (CreateProviderServiceCategoryResponse) {}
  rpc CreateProviderService(CreateProviderServiceRequest) returns (CreateProviderServiceResponse) {}
  rpc CreateProviderServiceAccount(CreateProviderServiceAccountRequest) returns (CreateProviderServiceAccountResponse) {}
}

message GetProviderServiceAccountRequest {
  int64 id = 1;
}

message GetProviderServiceAccountResponse {
  dream11.oam.dto.v1.ProviderServiceAccountEnriched service_account = 1;
}

message CreateProviderServiceCategoryRequest {
  string name = 2;
}

message CreateProviderServiceCategoryResponse {
  bool success = 1;
}

message CreateProviderServiceRequest {
  string provider_name = 2;
  string provider_service_category_name = 3;
  string name = 4;
  google.protobuf.Struct data_schema = 5;
}

message CreateProviderServiceResponse {
  bool success = 1;
}

message CreateProviderServiceAccountRequest {
  string provider_service_name = 2;
  string provider_account_name = 3;
  string provider_service_data = 4;
  bool is_active = 5;
}

message CreateProviderServiceAccountResponse {
  bool success = 1;
}
